--- a/src/app/home/home-layout/home-layout.component.html
+++ b/src/app/home/home-layout/home-layout.component.html
@@ -14,7 +14,7 @@
     </span>
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon" >
       <img class="w-10 h-10 rounded-full"
-        src="https://static.vecteezy.com/system/resources/thumbnails/009/292/244/small/default-avatar-icon-of-social-media-user-vector.jpg"
+        src="{{getFoto()}}"
         alt="user photo">
       </button>
       <span class="relative inline-flex" [matMenuTriggerFor]="menu">
