cambios en colores de botones y carga de imagen previa

--- a/src/app/home/components/change-password/change-password.component.html
+++ b/src/app/home/components/change-password/change-password.component.html
@@ -39,9 +39,11 @@
       </div>
       <div class="col-span-1">
         <div class="mt-6 flex items-center justify-end gap-x-6 pb-7 sm:col-span-3">
-          <button type="button" class="text-sm font-semibold leading-6 text-gray-900" (click)="cancelar()">
-            Cancelar
-          </button>
+          <button type="button"
+              class="rounded-md bg-gray-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-gray-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+              (click)="cancelar()">
+              Cancelar
+            </button>
           <button type="submit"
             class="rounded-md bg-blue-900 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-blue-800 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
             Guardar
