--- a/src/app/home/pages/profile/profile.component.html
+++ b/src/app/home/pages/profile/profile.component.html
@@ -6,9 +6,9 @@
   <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
     <div class="grid grid-rows-3 grid-flow-col gap-4 m-7">
       <div class="row-span-6">
-        <img class="w-40 h-40 p-1 rounded-full ring-4 ring-blue-900 dark:ring-blue-900" src="{{profilePhoto}}"
+        <img class="w-60 h-60 p-1 rounded-full ring-4 ring-blue-900 dark:ring-blue-900" src="{{profilePhoto}}" [src]="previewPhoto"
           alt="foto-perfil">
-        <div>
+        <div *ngIf="!isDisabled" >
           <label for="photo" class="block text-sm font-medium leading-6 text-gray-900">Foto</label>
           <div class="mt-2">
             <input type="file" id="photo" (change)="onFileChange($event)" accept="image/*"
@@ -94,9 +94,11 @@
               </div>
             </div>
             <div *ngIf="!isDisabled" class="mt-6 flex items-center justify-end gap-x-6 pb-7 sm:col-span-3">
-              <button type="button" class="text-sm font-semibold leading-6 text-gray-900" (click)="cancelar()">
-                Cancelar
-              </button>
+              <button type="button"
+              class="rounded-md bg-gray-500 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-gray-400 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
+              (click)="cancelar()">
+              Cancelar
+            </button>
               <button type="submit"
                 class="rounded-md bg-blue-900 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-blue-800 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
                 Guardar
