--- a/src/app/home/pages/academic-resources/academic-resources.component.html
+++ b/src/app/home/pages/academic-resources/academic-resources.component.html
@@ -59,7 +59,7 @@
   </div>
 
   <div *ngIf="selectedTab == 'Publicado'" class=" pt-5 pb-5">
-    <resources-table></resources-table>
+    <resources-table [filterByStatus]="'Aprobado'"></resources-table>
   </div>
 
   <div *ngIf="selectedTab == 'Mis Recursos'" class="pt-5 pb-5">
