--- a/src/app/academic-resources/components/resources-form/resources-form.component.html
+++ b/src/app/academic-resources/components/resources-form/resources-form.component.html
@@ -11,10 +11,8 @@
                 <select id="niveles" formControlName="idNivel"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
                     (change)="onNivelChange($event)">
-                    <option selected>Nivel</option>
-                    <option *ngFor="let nivel of nivelesType" value="{{nivel.value}}">
-                        {{ nivel.label }}
-                    </option>
+                    <option value="" disabled selected>Nivel</option>
+                    <option *ngFor="let nivel of nivelesType" [value]="nivel.value">{{ nivel.label }}</option>
                 </select>
             </div>
 
@@ -22,8 +20,8 @@
                 <label for="asignatura" class="block text-sm font-medium leading-6 text-gray-900">Asignatura</label>
                 <select id="asignaturas" formControlName="idAsignatura"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option *ngFor="let asignatura of asignaturas" value="{{asignatura.value}}">
-                        {{ asignatura.label }}
+                    <option value="" disabled selected>Asignatura</option>
+                    <option *ngFor="let asignatura of asignaturas" [value]="asignatura.value">{{ asignatura.label }}
                     </option>
                 </select>
             </div>
@@ -32,19 +30,16 @@
                 <label for="estado" class="block text-sm font-medium leading-6 text-gray-900">Estado</label>
                 <select id="estado" formControlName="estadoRecurso"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option *ngFor="let estado of estados" value="{{estado.value}}">
-                        {{ estado.label }}
-                    </option>
+                    <option value="" disabled selected>Estado</option>
+                    <option *ngFor="let estado of estados" [value]="estado.value">{{ estado.label }}</option>
                 </select>
             </div>
-
-             
 
             <div class="col-span-4">
                 <label for="tipoRecurso" class="block text-sm font-medium leading-6 text-gray-900">Tipo Recurso</label>
                 <select id="tipoRecurso" formControlName="tipoRecurso"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                    <option selected>Tipo Recurso</option>
+                    <option value="" disabled selected>Tipo Recurso</option>
                     <option value="Link">Link</option>
                     <option value="Archivo">Documento/Imagen</option>
                 </select>
@@ -52,10 +47,11 @@
 
             <div class="col-span-4" *ngIf="isLink()">
                 <label for="link" class="block text-sm font-medium leading-6 text-gray-900">Link</label>
-                <input type="text" id="link" formControlName="link"
+                <input type="text" id="link" formControlName="enlaceDelRecurso"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
                     placeholder="Link">
             </div>
+
             <div class="col-span-4" *ngIf="isFile()">
                 <label for="file" class="block text-sm font-medium leading-6 text-gray-900">Archivo/Imagen</label>
                 <div class="mt-2">
@@ -66,36 +62,18 @@
             </div>
 
             <div class="col-span-4">
-                <div class="col-span-4">
-                    <label for="nombreRevisor" class="block text-sm font-medium leading-6 text-gray-900">Revisor</label>
-                    <input type="text" id="nombreRevisor" formControlName="nombreRevisor"
-                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                        placeholder="Nombre del revisor">
-                </div>
-    
-                <div class="col-span-4">
-                    <label for="observacion" class="block text-sm font-medium leading-6 text-gray-900">Observación</label>
-                    <input type="text" id="observacion" formControlName="observaciones"
-                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                        placeholder="Observaciones">
-                </div>
+                <label for="nombreRevisor" class="block text-sm font-medium leading-6 text-gray-900">Revisor</label>
+                <input type="text" id="nombreRevisor" formControlName="nombreRevisor"
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                    placeholder="Nombre del revisor">
             </div>
 
-            <!-- <div class="col-span-4 text-right mt-5 mb-5">
-                <button type="button" (click)="cancelar()"
-                    class="text-white bg-gray-500 hover:bg-gray-400 focus:ring-4 focus:outline-none focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 mb-2">
-                    <span class="flex items-center justify-center">
-                        Cancelar
-                    </span>
-                </button>
-                <button type="submit"
-                    class="text-white bg-blue-900 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-700 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 mb-2">
-                    <span class="flex items-center justify-center">
-                        Guardar
-                    </span>
-                </button>
-            </div> -->
-           
+            <div class="col-span-4">
+                <label for="observacion" class="block text-sm font-medium leading-6 text-gray-900">Observación</label>
+                <input type="text" id="observacion" formControlName="observaciones"
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                    placeholder="Observaciones">
+            </div>
         </div>
     </form>
 </mat-dialog-content>
