Refactor resource editing form and service to use consistent naming conventions

--- a/src/app/academic-resources/components/edit-resource/edit-resource.component.html
+++ b/src/app/academic-resources/components/edit-resource/edit-resource.component.html
@@ -100,7 +100,7 @@
 </mat-dialog-content> -->
 
 <div class="container">
-    <div class="cardTo border-solid border-2 rounded my-3">
+    <div class="cardTo border-solid border-2 rounded my-3" *ngIf="datosRecursos">
         <app-resources-form [formData]="datosRecursos" (editedDataEmitter)="getData($event)"
             (valueFormEmitter)="getValidForm($event)"></app-resources-form>
     </div>
