Refactor resource upload components to handle file extensions and display error messages

--- a/src/app/academic-resources/components/resources-form/resources-form.component.html
+++ b/src/app/academic-resources/components/resources-form/resources-form.component.html
@@ -67,10 +67,12 @@
             </div>
 
             <div class="col-span-4">
-                <label for="nombreRevisor" class="block text-sm font-medium leading-6 text-gray-900">Revisor</label>
-                <input type="text" id="nombreRevisor" formControlName="nombreRevisor"
-                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                    placeholder="Nombre del revisor">
+                <label for="Docente Revisor" class="block text-sm font-medium leading-6 text-gray-900">Revisor</label>
+                <select id="docentes" formControlName="idDocenteRevisor"
+                    class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                    <option value="" disabled selected>Docente</option>
+                    <option *ngFor="let docente of docentes" [value]="docente.value">{{ docente.label }}</option>
+                </select>
             </div>
 
             <div class="col-span-4">
