--- a/src/app/academic-resources/components/edit-resource/edit-resource.component.html
+++ b/src/app/academic-resources/components/edit-resource/edit-resource.component.html
@@ -102,7 +102,8 @@
 <div class="container">
     <div class="cardTo border-solid border-2 rounded my-3" *ngIf="datosRecursos">
         <app-resources-form [formData]="datosRecursos" (editedDataEmitter)="getData($event)"
-            (valueFormEmitter)="getValidForm($event)"></app-resources-form>
+            (valueFormEmitter)="getValidForm($event)"
+            (asignaturaEmitter)="updateAsignatura($event)"></app-resources-form>
     </div>
     <div style="text-align: right;" class="my-2">
         <!-- <button class="btn btn-outline-danger" (click)="CloseModal()">Cancelar</button> -->
