modificaciones de tabla de recursos

--- a/src/app/academic-resources/components/edit-resource/edit-resource.component.html
+++ b/src/app/academic-resources/components/edit-resource/edit-resource.component.html
@@ -107,6 +107,6 @@
     </div>
     <div style="text-align: right;" class="my-2">
         <!-- <button class="btn btn-outline-danger" (click)="CloseModal()">Cancelar</button> -->
-        <button class="btn btn-light ml-3 backgroundbtn" [disabled]="validForm" (click)="saveRecurso()">Guardar</button>
+        <button class="btn btn-light ml-3 backgroundbtn" (click)="saveRecurso()">Hola</button>
     </div>
 </div>
