--- a/src/app/academic-resources/components/resources-form/resources-form.component.html
+++ b/src/app/academic-resources/components/resources-form/resources-form.component.html
@@ -77,9 +77,9 @@
 
             <div class="col-span-4">
                 <label for="observacion" class="block text-sm font-medium leading-6 text-gray-900">Observación</label>
-                <input type="text" id="observacion" formControlName="observaciones"
+                <input type="text" id="observacion" formControlName="observacion"
                     class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-                    placeholder="Observaciones">
+                    placeholder="Observacion">
             </div>
         </div>
     </form>
