--- a/src/app/academic-resources/components/resources-table/resources-table.component.html
+++ b/src/app/academic-resources/components/resources-table/resources-table.component.html
@@ -4,53 +4,54 @@
       <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
         <table class="min-w-full divide-y divide-gray-200">
           <thead>
-            <tr>
-              <th class=" px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+            <tr >
+              <th class=" px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider bg-blue-900">
                 <p *ngIf="selectedTab ==='Mis Recursos'">Acciones</p>
               </th>
-              <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider bg-blue-900">
                 Nombre Recurso</th>
-              <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider bg-blue-900">
                 Asignatura</th>
-              <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider bg-blue-900">
                 Nivel</th>
-              <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider bg-blue-900">
                 Fecha Creación</th>
-              <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Tipo
+              <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider bg-blue-900">Tipo
                 Recurso</th>
-              <th class="px-6 py-3 bg-gray-50 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+              <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider bg-blue-900">
                 Usuario Creación</th>
+              <th *ngIf="selectedTab === 'Mis Recursos'" class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider bg-blue-900">
+                Estado</th>
             </tr>
           </thead>
           <tbody class="bg-white divide-y divide-gray-200">
             <tr *ngFor="let item of paginatedData">
               <td class="px-6 py-4 whitespace-nowrap">
                 <mat-icon class="text-red-600 mr-2"
-                  *ngIf="item.usuarioCreacion == usuario && selectedTab === 'Mis Recursos'"
+                  *ngIf="item.usuarioCreacion == usuario && selectedTab === 'Mis Recursos' && item.estadoRecurso != 'Aprobado' && item.docenteRevisor == ''" 
                   (click)="eliminarRecurso(item.idRecurso)">delete</mat-icon>
                 <mat-icon class="text-blue-800 mr-2"
-                  *ngIf="item.usuarioCreacion == usuario && selectedTab === 'Mis Recursos'"
+                  *ngIf="item.usuarioCreacion == usuario && selectedTab === 'Mis Recursos' && item.estadoRecurso != 'Aprobado' && item.docenteRevisor == ''" 
                   (click)="editarRecurso(item.idRecurso)">edit</mat-icon>
-                <mat-icon class="text-blue-800">visibility</mat-icon>
+                  <a [href]="openFileInTab(item)" target="_blank">
+                    <mat-icon class="text-blue-800">visibility</mat-icon>
+                  </a>
               </td>
               <td class="px-6 py-4 whitespace-nowrap">{{ item.nombreRecurso }}</td>
               <td class="px-6 py-4 whitespace-nowrap">{{ item.asignatura }}</td>
               <td class="px-6 py-4 whitespace-nowrap">{{ item.nivel }}</td>
               <td class="px-6 py-4 whitespace-nowrap">{{ item.fechaCreacion | date }}</td>
               <td class="px-6 py-4 whitespace-nowrap">
-
                 <div
                   class="flex justify-center items-center m-1 font-medium py-1 px-2 pt-2 pb-2 rounded-full text-white"
                   [class]="getStyleColor(item.tipoRecurso)">
-                  <!-- <div slot="icon">
-                      <mat-icon class="text-sm">{{getIcon(item.tipoRecurso)}}</mat-icon>
-                  </div> -->
                   <div class="text-xs font-normal leading-none max-w-full flex-initial">
                     {{item.tipoRecurso}}
                   </div>
                 </div>
               </td>
               <td class="px-6 py-4 whitespace-nowrap">{{ item.usuarioCreacion }}</td>
+              <td *ngIf="selectedTab === 'Mis Recursos'" class="px-6 py-4 whitespace-nowrap">{{ item.estadoRecurso }}</td>
             </tr>
           </tbody>
         </table>
