--- a/src/app/home/pages/academic-resources/academic-resources.component.html
+++ b/src/app/home/pages/academic-resources/academic-resources.component.html
@@ -53,7 +53,9 @@
       <li *ngIf="rol == 'Docente'" class="me-2">
         <span (click)="selectedTab = 'Por Aprobar'"
           [ngClass]="{'text-blue-900 border-b-2 border-blue-900': selectedTab === 'Por Aprobar', 'hover:text-gray-600 hover:border-gray-300': selectedTab !== 'Por Aprobar'}"
-          class="inline-block p-4 rounded-t-lg">Por Aprobar</span>
+          class="inline-block p-4 rounded-t-lg" matBadge="4">Por Aprobar
+        </span>
+        <!-- <div class="inline-flex items-center justify-center w-6 h-6 text-xs font-bold text-white bg-red-500 border-2 border-white rounded-full -top-2 -end-2"></div> -->
       </li>
     </ul>
   </div>
@@ -65,4 +67,8 @@
   <div *ngIf="selectedTab == 'Mis Recursos'" class="pt-5 pb-5">
     <resources-table [filterByUser]="usuario"></resources-table>
   </div>
+
+  <div *ngIf="selectedTab == 'Por Aprobar'" class="pt-5 pb-5">
+    <resources-table [filterByRevisor]="usuario" [filterByStatus]="'Ingresado'"></resources-table>
+  </div> 
 </div>
