modificaciones intento carga horaria

--- a/src/app/docente/carga-horaria/carga-horaria.component.html
+++ b/src/app/docente/carga-horaria/carga-horaria.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="cargaHorariaGroup" (ngSubmit)="onSubmit()">
+<!-- <form [formGroup]="cargaHorariaGroup" (ngSubmit)="onSubmit()">
     <div formArrayName="cargasHorarias">
         <div *ngFor="let cargaHoraria of cargasHorarias.controls; let i = index" [formGroupName]="i">
             <div>
@@ -27,4 +27,7 @@
 
     <button type="button" (click)="agregarCargaHoraria()">Agregar Carga Horaria</button>
     <button type="submit">Enviar</button>
-</form>
+</form> -->
+
+
+<P>HOLA</P>
