--- a/src/app/academic-resources/components/resources-table/resources-table.component.html
+++ b/src/app/academic-resources/components/resources-table/resources-table.component.html
@@ -4,7 +4,7 @@
       <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
         <table class="min-w-full divide-y divide-gray-200">
           <thead>
-            <tr >
+            <tr>
               <th class=" px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider bg-blue-900">
                 <p *ngIf="selectedTab ==='Mis Recursos'">Acciones</p>
               </th>
@@ -20,7 +20,8 @@
                 Recurso</th>
               <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider bg-blue-900">
                 Usuario Creación</th>
-              <th *ngIf="selectedTab === 'Mis Recursos'" class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider bg-blue-900">
+              <th *ngIf="selectedTab === 'Mis Recursos'"
+                class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider bg-blue-900">
                 Estado</th>
             </tr>
           </thead>
@@ -28,14 +29,14 @@
             <tr *ngFor="let item of paginatedData | resourcesFilter: nombreRecurso : nivel : asignatura">
               <td class="px-6 py-4 whitespace-nowrap">
                 <mat-icon class="text-red-600 mr-2"
-                  *ngIf="item.usuarioCreacion == usuario && selectedTab === 'Mis Recursos' && item.estadoRecurso != 'Aprobado' && item.docenteRevisor == ''" 
+                  *ngIf="item.usuarioCreacion == usuario && selectedTab === 'Mis Recursos' && item.estadoRecurso != 'Aprobado' && item.docenteRevisor == ''"
                   (click)="eliminarRecurso(item.idRecurso)">delete</mat-icon>
                 <mat-icon class="text-blue-800 mr-2"
-                  *ngIf="item.usuarioCreacion == usuario && selectedTab === 'Mis Recursos' && item.estadoRecurso != 'Aprobado' && item.docenteRevisor == ''" 
+                  *ngIf="item.usuarioCreacion == usuario && selectedTab === 'Mis Recursos' && item.estadoRecurso != 'Aprobado' && item.docenteRevisor == ''"
                   (click)="editarRecurso(item.idRecurso)">edit</mat-icon>
-                  <a [href]="openFileInTab(item)" target="_blank">
-                    <mat-icon class="text-blue-800">visibility</mat-icon>
-                  </a>
+                <a [href]="openFileInTab(item)" target="_blank">
+                  <mat-icon class="text-blue-800">visibility</mat-icon>
+                </a>
               </td>
               <td class="px-6 py-4 whitespace-nowrap">{{ item.nombreRecurso }}</td>
               <td class="px-6 py-4 whitespace-nowrap">{{ item.asignatura }}</td>
@@ -51,7 +52,8 @@
                 </div>
               </td>
               <td class="px-6 py-4 whitespace-nowrap">{{ item.usuarioCreacion }}</td>
-              <td *ngIf="selectedTab === 'Mis Recursos'" class="px-6 py-4 whitespace-nowrap">{{ item.estadoRecurso }}</td>
+              <td *ngIf="selectedTab === 'Mis Recursos'" class="px-6 py-4 whitespace-nowrap">{{ item.estadoRecurso }}
+              </td>
             </tr>
           </tbody>
         </table>
