--- a/src/app/docente/carga-horaria/carga-horaria.component.html
+++ b/src/app/docente/carga-horaria/carga-horaria.component.html
@@ -1,89 +1,50 @@
-<!-- <form [formGroup]="cargaHorariaGroup" (ngSubmit)="onSubmit()">
-    <div formArrayName="cargasHorarias">
-        <div *ngFor="let cargaHoraria of cargasHorarias.controls; let i = index" [formGroupName]="i">
-            <div>
-                <label for="diaSemana">Día de la semana:</label>
-                <select id="diaSemana" formControlName="diaSemana">
-                    <option value="" disabled selected>Día Semana</option>
-                    <option *ngFor="let dia of diasSemana" [value]="dia.value">{{ dia.label }}</option>
-                </select>
-            </div>
-            <div>
-                <label for="actividad">Actividad:</label>
-                <input type="text" id="actividad" formControlName="actividad">
-            </div>
-            <div>
-                <label for="horaDesde">Hora desde:</label>
-                <input type="time" id="horaDesde" formControlName="horaDesde">
-            </div>
-            <div>
-                <label for="horaHasta">Hora hasta:</label>
-                <input type="time" id="horaHasta" formControlName="horaHasta">
-            </div>
+<form [formGroup]="cargaHorariaForm" (ngSubmit)="onSubmit()">
+  <table class="min-w-full divide-y divide-gray-200">
+    <thead>
+      <tr>
+        <th class="px-6 py-3 bg-blue-900 text-left text-xs font-medium text-white uppercase tracking-wider">Acciones
+        </th>
+        <th class="px-6 py-3 bg-blue-900 text-left text-xs font-medium text-white uppercase tracking-wider">Día de la
+          Semana</th>
+        <th class="px-6 py-3 bg-blue-900 text-left text-xs font-medium text-white uppercase tracking-wider">Actividad
+        </th>
+        <th class="px-6 py-3 bg-blue-900 text-left text-xs font-medium text-white uppercase tracking-wider">Hora Desde
+        </th>
+        <th class="px-6 py-3 bg-blue-900 text-left text-xs font-medium text-white uppercase tracking-wider">Hora Hasta
+        </th>
+      </tr>
+    </thead>
+    <tbody class="bg-white divide-y divide-gray-200" formArrayName="cargaHoraria">
+      <tr *ngFor="let carga of cargaHorariaArray.controls; let i = index" [formGroupName]="i" class="hover:bg-gray-100">
+        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+          <button (click)="removeCargaHoraria(i)" class="text-red-500 hover:text-red-700">Eliminar</button>
+        </td>
+        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+          <select formControlName="diaSemana"
+            class="w-full px-3 py-2 border rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm">
+            <option *ngFor="let dia of diasSemana" [value]="dia.value">{{ dia.label }}</option>
+          </select>
+        </td>
+        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+          <input formControlName="actividad" placeholder="actividad"
+            class="w-full px-3 py-2 border rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm" />
+        </td>
+        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+          <input type="time" formControlName="horaDesde"
+            class="w-full px-3 py-2 border rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm" />
+        </td>
+        <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
+          <input type="time" formControlName="horaHasta"
+            class="w-full px-3 py-2 border rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 sm:text-sm" />
+        </td>
+      </tr>
+    </tbody>
+  </table>
 
-            <button type="button" (click)="eliminarCargaHoraria(i)">Eliminar</button>
-        </div>
-    </div>
-
-    <button type="button" (click)="agregarCargaHoraria()">Agregar Carga Horaria</button>
-    <button type="submit">Enviar</button>
-</form> -->
-
-
-<div class="flex flex-col" *ngIf="data.length > 0; else noData">
-    <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
-      <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
-        <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
-          <table class="min-w-full divide-y divide-gray-200">
-            <thead>
-              <tr >
-                <th class=" px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider bg-blue-900">
-                  <p >Acciones</p>
-                </th>
-                <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider bg-blue-900">
-                  NOMBRE 1</th>
-                <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider bg-blue-900">
-                  NOMBRE 2</th>
-                <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider bg-blue-900">
-                  NOMBRE 3</th>
-                <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider bg-blue-900">
-                  NOMBRE 4</th>
-                <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider bg-blue-900">Tipo
-                  NOMBRE 5</th>
-                <th class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider bg-blue-900">
-                  NOMBRE 6</th>
-                <th  class="px-6 py-3 text-left text-xs font-medium text-white uppercase tracking-wider bg-blue-900">
-                  NOMBRE 7</th>
-              </tr>
-            </thead>
-            <tbody class="bg-white divide-y divide-gray-200">
-              <tr *ngFor="let item of paginatedData">
-                <td class="px-6 py-4 whitespace-nowrap">
-                 
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap">{{ item.nombreRecurso }}</td>
-                <td class="px-6 py-4 whitespace-nowrap">{{ item.asignatura }}</td>
-                <td class="px-6 py-4 whitespace-nowrap">{{ item.nivel }}</td>
-                <td class="px-6 py-4 whitespace-nowrap">{{ item.fechaCreacion | date }}</td>
-                <td class="px-6 py-4 whitespace-nowrap">
-                  <div
-                    class="flex justify-center items-center m-1 font-medium py-1 px-2 pt-2 pb-2 rounded-full text-white"
-                    >
-                    <div class="text-xs font-normal leading-none max-w-full flex-initial">
-                      {{item.tipoRecurso}}
-                    </div>
-                  </div>
-                </td>
-                <td class="px-6 py-4 whitespace-nowrap">{{ item.usuarioCreacion }}</td>
-                <td class="px-6 py-4 whitespace-nowrap">{{ item.estadoRecurso }}</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  </div>
-  
-  <ng-template #noData>
-    <div class="text-center text-xl">No hay datos disponibles.</div>
-  </ng-template>
+  <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded" (click)="addCargaHoraria()"
+    type="button">
+    Añadir Carga Horaria
+  </button>
+  <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded" type="submit">Guardar Cargas
+    Horarias</button>
+</form>
