asignación de revisor

--- a/src/app/home/pages/aprobar-docentes/aprobar-docentes.component.html
+++ b/src/app/home/pages/aprobar-docentes/aprobar-docentes.component.html
@@ -25,23 +25,14 @@
   
   <div class="m-7">
     <div class="mt-5 mb-5">
-      <span class="text-3xl">Carga Horaria</span>
-      <button type="button" (click)="openDialog()"
-        class="ml-2 text-white bg-gradient-to-r from-blue-950 via-blue-800 to-blue-900 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-base px-5 py-2.5 text-center me-2 mb-2">
-        <span class="flex items-center justify-center">
-          <!-- <mat-icon>add</mat-icon> -->
-          Nuevo
-        </span>
-      </button>
+      <span class="text-3xl">Aprobación Docentes</span>
     </div>
     <div class="mt-2 mb-2">
     </div>
   
     <div class="text-sm font-medium text-center text-gray-700 border-b border-gray-200">
     </div>
-
-    <!-- <app-carga-horaria></app-carga-horaria> -->
-
+    <aprobar-docente></aprobar-docente>
   </div>
 
 
