--- a/src/app/academic-resources/components/resources-table/resources-table.component.html
+++ b/src/app/academic-resources/components/resources-table/resources-table.component.html
@@ -32,7 +32,7 @@
                   *ngIf="item.usuarioCreacion == usuario && selectedTab === 'Mis Recursos' && item.estadoRecurso != 'Aprobado' && item.docenteRevisor == ''"
                   (click)="eliminarRecurso(item.idRecurso)">delete</mat-icon>
                 <mat-icon class="text-blue-800 mr-2"
-                  *ngIf="item.usuarioCreacion == usuario && selectedTab === 'Mis Recursos' && item.estadoRecurso != 'Aprobado' && item.docenteRevisor == ''"
+                  *ngIf="item.usuarioCreacion == usuario && selectedTab === 'Mis Recursos'|| selectedTab ==='Recursos Académicos' && item.estadoRecurso != 'Aprobado' && item.docenteRevisor == ''" 
                   (click)="editarRecurso(item.idRecurso)">edit</mat-icon>
                 <a [href]="openFileInTab(item)" target="_blank">
                   <mat-icon class="text-blue-800">visibility</mat-icon>
