--- a/src/app/security/components/aprobar-docente/aprobar-docente.component.html
+++ b/src/app/security/components/aprobar-docente/aprobar-docente.component.html
@@ -23,10 +23,10 @@
           <tbody class="bg-white divide-y divide-gray-200">
             <tr *ngFor="let item of paginatedData">
               <td class=" px-6 py-4 whitespace-nowrap">
-                <mat-icon class="text-red-600 mr-2" (click)="aprobarDocente()">delete</mat-icon>
-                <mat-icon class="text-blue-800 mr-2" (click)="editarDocente(item.idDocente)">edit</mat-icon>
+                <mat-icon class="text-red-600 mr-2" (click)="rechazarDocente()">delete</mat-icon>
+                <mat-icon class="text-blue-800 mr-2" (click)="aprobarDocente()">edit</mat-icon>
               </td>
-              <td class="px-6 py-4 whitespace-nowrap">{{ item.nombresCompletos }}</td>
+              <td class="px-6 py-4 whitespace-nowrap">{{ item.nombresCompletos}}</td>
               <td class="px-6 py-4 whitespace-nowrap">{{ item.cedula }}</td>
               <td class="px-6 py-4 whitespace-nowrap">{{ item.correo }}</td>
               <td class="px-6 py-4 whitespace-nowrap">{{ item.telefono }}</td>
