--- a/src/app/academic-resources/components/edit-resource/edit-resource.component.html
+++ b/src/app/academic-resources/components/edit-resource/edit-resource.component.html
@@ -107,6 +107,20 @@
     </div>
     <div style="text-align: right;" class="my-2">
         <!-- <button class="btn btn-outline-danger" (click)="CloseModal()">Cancelar</button> -->
-        <button class="btn btn-light ml-3 backgroundbtn" (click)="saveRecurso()">Hola</button>
+        <!-- <button class="btn btn-light ml-3 backgroundbtn" (click)="saveRecurso()">Hola</button> -->
+        <div class="col-span-4 text-right mt-5 mb-5">
+            <button type="button" (click)="cancelar()"
+                class="text-white bg-gray-500 hover:bg-gray-400 focus:ring-4 focus:outline-none focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 mb-2">
+                <span class="flex items-center justify-center">
+                    Cancelar
+                </span>
+            </button>
+            <button type="button" (click)="saveRecurso()"
+                class="text-white bg-blue-900 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-700 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 mb-2">
+                <span class="flex items-center justify-center">
+                    Guardar
+                </span>
+            </button>
+        </div>
     </div>
 </div>
